<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/refer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:fitsSystemWindows="true"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/back"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:lottie_autoPlay="true"
        android:layout_margin="25dp"
        android:layout_weight="1"
        app:lottie_fileName="robot.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/en_light"
        android:gravity="center_horizontal"
        android:text="@string/beep_bop_beep_bop"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center_horizontal"
        android:text="@string/are_you_a_robot"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="15sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Widget.Material3Expressive.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_semibold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/verify" />

</LinearLayout>