<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refer"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:id="@+id/back"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/back"
                    android:src="@drawable/back" />

            </LinearLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:indeterminate="true" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="24dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="tsv_setup_mail.tgs"
                app:lottie_loop="false" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/en_light"
                android:gravity="center_horizontal"
                android:paddingStart="32dp"
                android:paddingTop="5dp"
                android:paddingEnd="32dp"
                android:paddingBottom="0dp"
                android:text="@string/password_recovery"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="?attr/colorOnSurface"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_horizontal"
                android:paddingStart="32dp"
                android:paddingTop="5dp"
                android:paddingEnd="32dp"
                android:paddingBottom="0dp"
                android:text="@string/please_provide_us_with_your_email_address_to_initiate_the_password_recovery_process"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxCornerRadiusBottomEnd="14dp"
                app:boxCornerRadiusBottomStart="14dp"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_regular"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                style="@style/Widget.Material3Expressive.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/continue_" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>